--- a/src/app/seller-auth/seller-auth.component.html
+++ b/src/app/seller-auth/seller-auth.component.html
@@ -1,4 +1,146 @@
-<div class="card m-4" *ngIf="!showLogin">
+<!-- <div class="card mb-3" style="max-width: 1000px;">
+    <div class="row g-0">
+      <div class="col-md-8">
+        
+        <img src="https://cdn.pixabay.com/photo/2017/03/13/17/26/ecommerce-2140603__340.jpg" class="img-fluid rounded-start" style="width: 42rem; height: 400px;" alt="">
+      </div>
+      <div class="col-md-4">
+        <div class="card-body " *ngIf="!showLogin">
+            <form [formGroup]="harsha">
+                <div  >
+                    <div class="form-group ">
+                        <label>
+                            <h5>Name:</h5>
+                        </label>
+                        <input type="text" class="form-control" formControlName="firstName"
+                            name="firstName">
+                    </div>
+                    <div class="input-group mb-3 ">
+                        <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+                      </div>
+                      
+                </div>
+                <div >
+                    <div class="form-group">
+                        <label>
+                            <h5>Password:</h5>
+                        </label>
+                        <input type="text" class="form-control" formControlName="lastName" name="lastName">
+                    </div>
+                </div>
+                <div >
+                    <div class="form-group">
+                        <label>
+                            <h5>Email Id:</h5>
+                        </label>
+                        <input type="text" class="form-control" formControlName="email" name="email">
+                    </div>
+                </div>
+                <div class="col-12 text-center">
+                    <button type="submit" class="btn btn-info mt-3">Submit</button>
+                </div>
+                <div class="har d-flex justify-content-between ">
+                    <a class="card-link mt-3" (click)="openLogin()">already have an account?</a>
+                </div>
+
+            </form>
+        </div>
+      </div>
+    </div>
+  </div> -->
+<!-- ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,, -->
+
+<!-- <div class="card mb-3" style="max-width: 1000px;">
+    <div class="row g-0">
+      <div class="col-md-8">
+        
+        <img src="https://cdn.pixabay.com/photo/2017/03/13/17/26/ecommerce-2140603__340.jpg" class="img-fluid rounded-start" style="width: 42rem; height: 400px;" alt="">
+      </div>
+      <div class="col-md-4">
+        <div class="card-body " >
+            <form [formGroup]="harsha">
+                <div  >
+                    <div class="form-group ">
+                        <label>
+                            <h5>Name:</h5>
+                        </label>
+                        <input type="text" class="form-control" formControlName="firstName"
+                            name="firstName">
+                    </div>
+                    <div class="input-group mb-3 ">
+                        <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+                      </div>
+                      
+                </div>
+                <div >
+                    <div class="form-group">
+                        <label>
+                            <h5>Password:</h5>
+                        </label>
+                        <input type="text" class="form-control" formControlName="lastName" name="lastName">
+                    </div>
+                </div>
+                <div >
+                    <div class="form-group">
+                        <label>
+                            <h5>Email Id:</h5>
+                        </label>
+                        <input type="text" class="form-control" formControlName="email" name="email">
+                    </div>
+                </div>
+                <div class="col-12 text-center">
+                    <button type="submit" class="btn btn-info mt-3">Submit</button>
+                </div>
+                <div class="har d-flex justify-content-between ">
+                    <a class="card-link mt-3" (click)="openLogin()">already have an account?</a>
+                </div>
+
+            </form>
+        </div>
+      </div>
+    </div>
+  </div> -->
+
+
+<!-- <div class=""  *ngIf="showLogin">
+  <form [formGroup]="harshu">
+
+    <h3 class="card-title  text-center mt-2">SignIn here</h3>
+    <hr>
+    <div class="Form-Group">
+        <label class="Form-label">Email</label>
+        <input type="email" name="email" class="form-control" formControlName="email"
+            placeholder="enter email"><small class="text-danger"
+            *ngIf="!harshu.get('email')?.valid && harshu.get('email')?.touched">Enter Your Valid
+            Email</small>
+
+    </div>
+    <div class="Form-Group">
+        <label class="Form-label">Password</label>
+        <input type="password" name="pwd" class="form-control" formControlName="pwd"
+            placeholder="enter password">
+        <small class="text-danger"
+            *ngIf="!harshu.get('pwd')?.valid && harshu.get('pwd')?.touched">Enter Your
+            Password</small>
+    </div>
+    <div style="text-align: center;">
+        <button type="submit" class="btn btn-dark form-control mt-2" >Sign-in</button>
+    </div>
+    <div class="har d-flex justify-content-between ">
+        <a class="card-link mt-3" [routerLink]="['/']">Forget-password-?</a>
+        <a class="card-link mt-3" [routerLink]="['/s-auth']">sign-up</a>
+    </div>
+</form>
+</div> -->
+
+
+
+
+  <!-- ..............................-->
+
+
+  
+  <div class="card m-4" *ngIf="!showLogin">
     <div class="container my-5 mx-3">
         <div class="row">
             <div class="col-lg-5">
@@ -52,10 +194,10 @@
             </div>
         </div>
     </div>
-</div>
+</div> 
 
 
-<div class="container bg-light" id="hi" *ngIf="showLogin">
+<div class="container-fluid bg-light" id="hi" *ngIf="showLogin">
     <div class="row justify-content-center">
         <div class="col-xs-6 col-md-6 col-xl-3">
 
@@ -89,4 +231,4 @@
             </form>
         </div>
     </div>
-</div>
+</div> 
