--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,19 +1,20 @@
 form {
-    outline: cornflowerblue;
+    outline: rgb(25, 83, 41);
     height: 37px;
     width: 100%;
-    max-width: 350px;
- background: rgba(255, 255, 255, 0.774);
+    max-width: 700px;
+ background: rgba(255, 255, 255, 0.991);
  display: flex;
  align-items: center;
  border-radius: 60px;
  padding:3px 10px;
- border:3px inset rgb(0, 204, 255) ;
+ border:3px inset rgb(40, 150, 42) ;
 }
 
 form input{
+    width: 100rem;
     height: 30px;
-    border: 0;
+ 
   background-color: #ffffff;
      color: #ffffff;
     }
@@ -23,11 +24,18 @@ form button{
     border:2px;
     border-radius: 50%;
     height:30px;
-    background-color: #06a4ff;
+    background-color: #339b42;
     cursor: pointer;
     color: white;
 }
-ul li :hover{
-text-shadow:0 0 10px 5px black ;
+ul li {
+font-size: 20px;
+font-weight:bold ;
+/* float: right; */
+}
 
+.navbar-brand{
+    font-size: 50px;
+   font-weight: bold;
+   font-family:'Courier New', Courier, monospace;
 }
