--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,31 +1,48 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light ">
-    <div class="container-fluid">
-      <a class="navbar-brand text-dark mx-4" href="#">Oncard</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-  
-      <form class="d-flex mx-5">
-        <input class="form-control  me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success text-dark my-1" type="submit"><i class="fa-solid fa-magnifying-glass "></i></button>
-      </form>
-      <div class="collapse  navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link text-dark active" aria-current="page" [routerLink]="['/seller-auth']">Seller</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-dark" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-dark" [routerLink]="['/seller-login']">Login</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-dark" href="#">Cart(0)</a>
-          </li>
-        </ul>
-  
-      </div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand mx-4 text-center" [routerLink]="['']">Oncart</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <form class="d-flex mx-5" *ngIf="userType==='default'">
+      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-1" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+    </form>
+    <div class="collapse navbar-collapse justify-content-sm-end" id="navbarSupportedContent" >
+     <div [ngSwitch]="userType">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0" *ngSwitchCase="'default'">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" [routerLink]="['/seller-auth']"><i class="fa-solid fa-user mx-1"></i>Seller</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['']"><i class="fa-solid fa-house mx-1"></i>Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['']"><i class="fa-solid fa-right-to-bracket mx-1"></i>Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['addproduct']"><i class="fa-solid fa-cart-shopping mx-1"></i>Cart(0)</a>
+        </li>
+      </ul>
+
+
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0" *ngSwitchCase="'seller'">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" [routerLink]="['/seller-auth']"><i class="fa-solid fa-user mx-1"></i>ProductList</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['']"><i class="fa-solid fa-house mx-1"></i>AddProduct</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['']" (click)="logOut()"><i class="fa-solid fa-right-to-bracket mx-1"></i>LogOut</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['addproduct']"><i class="fa-solid fa-cart-shopping mx-1"></i>{{sellerName|titlecase}}</a>
+        </li>
+      </ul>
     </div>
-  </nav>
+    </div>
+  </div>
+</nav>
